--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -3703,37 +3703,6 @@
                                                     };
                                                 }
 
-                                                         function getMoonPhaseSVG(illuminationPct, size = 14) {
-                                                             // illuminationPct: 0 to 100
-                                                             const k = illuminationPct / 100;  // 0 to 1
-                                                             const radius = size / 2;
-                                                             const cx = radius;
-                                                             const cy = radius;
-
-                                                             let dOffset = 0;
-                                                             let sweepFlag = 1;  // for waxing
-                                                             let largeArcFlag = 0;
-
-                                                             if (k <= 0.5) {
-                                                                 // Waxing: shadow on the right
-                                                                 dOffset = 2 * radius * (1 - 2 * k);
-                                                                 sweepFlag = 1;
-                                                             } else {
-                                                                 // Waning: shadow on the left (flip direction)
-                                                                 dOffset = 2 * radius * (2 * k - 1);
-                                                                 sweepFlag = 0;
-                                                             }
-
-                                                             const shadowCx = cx + dOffset;
-
-                                                             return `
-                                                         <svg width="${size}" height="${size}" viewBox="0 0 ${size} ${size}" xmlns="http://www.w3.org/2000/svg">
-                                                           <!-- Full moon (light part) -->
-                                                           <circle cx="${cx}" cy="${cy}" r="${radius}" fill="#fff" />
-                                                           <!-- Shadow circle -->
-                                                           <circle cx="${shadowCx}" cy="${cy}" r="${radius}" fill="#000" />
-                                                         </svg>`;
-                                                         }
 
                                                 
                                                                                 function updateQthPopup() {
@@ -3785,9 +3754,12 @@
                                                                                         }
                                                                                     }
 
-                                                                                  
+                                                                                    const moonIcon = `
+                                                                                      <svg width="14" height="14" viewBox="0 0 24 24" style="vertical-align:middle;">
+                                                                                        <path fill="currentColor" d="M12 2a9.93 9.93 0 0 0-7.06 2.94A10 10 0 1 0 22 12c0-.34-.02-.67-.05-1a8 8 0 0 1-9.95-9z"/>
+                                                                                      </svg>
+                                                                                    `;
 
-                                                                                    const moonIcon = getMoonPhaseSVG(moonInfo.illumination, 14);  // size 14 to match current
                                                                                     const popupContent = `
                                                                                       My Locator: ${locator}<br>
                                                                                       <div style="height:4px"></div>
