--- a/eme-observer/table-t.html
+++ b/eme-observer/table-t.html
@@ -401,13 +401,23 @@
             <div class="button-container">
                 <button onclick="window.location.href='/eme-observer/'">Map View</button>
                 <button onclick="window.location.href='statistics.html'">Statistics</button>
-                <button onclick="window.location.href='datasubmission.html'">Add Station</button>
+                <button onclick="window.location.href='datasubmission.html'"
+                            style="display:flex; align-items:center; justify-content:center; width:40px; padding:0;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+                        </svg>
+                    </button>
                 <button onclick="window.location.href='/'" style="display:flex; align-items:center; justify-content:center; width:40px; padding:0;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M12 3l9 9h-3v9h-12v-9h-3l9-9z"/>
                     </svg>
                 </button>
-                <button onclick="window.location.href='user-guide.html'">?</button>
+                <button onclick="window.location.href='user-guide.html'"
+                            style="display:flex; align-items:center; justify-content:center; width:40px; padding:0;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 2c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4zm-1 16h2v-2h-2v2z"/>
+                        </svg>
+                    </button>
             </div>
         </div>
     </div>
