--- a/eme-observer/table-t.html
+++ b/eme-observer/table-t.html
@@ -429,6 +429,7 @@
                 <select id="bandSelect" class="band-select">
                     <option value="222MHz">222MHz</option>
                     <option value="432MHz">432MHz</option>
+                    <option value="902MHz">902MHz</option>
                     <option value="1296MHz">1296MHz</option>
                     <option value="2320MHz">2320MHz</option>
                     <option value="3400MHz">3400MHz</option>
@@ -478,6 +479,7 @@
         const bandConfig = {
             '222MHz': { label: '222MHz', jsonFile: 'stn_222MHz.json' },
             '432MHz': { label: '432MHz', jsonFile: 'stn_432MHz.json' },
+            '902MHz': { label: '902MHz', jsonFile: 'stn_902MHz.json' },
             '1296MHz': { label: '1296MHz', jsonFile: 'stn_1296MHz.json' },
             '2320MHz': { label: '2320MHz', jsonFile: 'stn_2320MHz.json' },
             '3400MHz': { label: '3400MHz', jsonFile: 'stn_3400MHz.json' },
