--- a/eme-observer/statistics-t.html
+++ b/eme-observer/statistics-t.html
@@ -580,7 +580,7 @@
       function updateUI(band) {
           document.getElementById('table-title').textContent = `${bandConfig[band].label} EME Stations Statistics`;
 
-          const notReadyBands = ['222MHz', '432MHz', '76GHz'];
+          const notReadyBands = ['222MHz', '432MHz', '902MHz', '76GHz'];
           if (notReadyBands.includes(band)) {
               document.getElementById('statsContent').style.display = 'none';
               document.getElementById('statsMessage').style.display = 'block';
