--- a/eme-observer/user-guide-t.html
+++ b/eme-observer/user-guide-t.html
@@ -429,12 +429,13 @@
       
       <h3 id="station-data">Station Data</h3>
       <p>
-        Station data is contributed by the community. EME Observer's 432MHz and Above database builds upon the excellent and dedicated work of Jan PA0PLY, who maintains a comprehensive list of active EME stations. The database for 222MHz is maintained by Martin PJ4MM.
+        Station data is contributed by the community. The 432&nbsp;MHz and above database builds upon the excellent and dedicated work of Jan PA0PLY, who maintains a comprehensive list of active EME stations. The databases for 222&nbsp;MHz and 902&nbsp;MHz, bands that are almost entirely specific to ITU Region&nbsp;2, are maintained by Martin PJ4MM.
         <br><br>
-        To add or update a station operating at 432MHz and Above, please submit your information through the <a href="https://www.pa0ply.nl/eme-directory/" target="_blank" rel="noopener">PA0PLY EME Directory</a>. To add a station operating at 222MHz send the data to <a href="https://www.qrz.com/db/PJ4MM" target="_blank" rel="noopener">Martin PJ4MM</a>. Only include stations that have transmit (TX) capability and have completed at least one EME QSO on the band for which you are submitting data.
+        To add or update a station operating on 432&nbsp;MHz and above, please submit your information through the <a href="https://www.pa0ply.nl/eme-directory/" target="_blank" rel="noopener">PA0PLY EME Directory</a>. To add or update a station operating on 222&nbsp;MHz or 902&nbsp;MHz, send the data to <a href="https://www.qrz.com/db/PJ4MM" target="_blank" rel="noopener">Martin PJ4MM</a>. Only include stations that have transmit (TX) capability and have completed at least one EME QSO on the band for which data is being submitted.
         <br><br>
-        To include a station image in the EME Observer station profiles, please send the image to Max SA5IKN, using the email address listed on <a href="https://www.qrz.com/db/SA5IKN" target="_blank" rel="noopener">his QRZ.com profile</a>. Please specify which band the picture is intended for. Each band can use a dedicated image, or the same image can be applied across all bands.
+        To include a station image in the EME Observer station profiles, please send the image to <a href="https://www.qrz.com/db/SA5IKN" target="_blank" rel="noopener">Max SA5IKN</a>. Please specify the band for which the image is intended. Each band may use a dedicated image, or the same image may be applied across all bands.
       </p>
+
 
     </section>
 
