--- a/eme-observer/user-guide-t.html
+++ b/eme-observer/user-guide-t.html
@@ -719,6 +719,22 @@
       </p>
       
       <figure style="margin-top: 10px; text-align: center;">
+        <a href="images/my-locator-marker.jpg" target="_blank" rel="noopener">
+          <img
+            src="images/my-locator-marker.jpg"
+            alt="My Locator marker popup with moon data displayed"
+            loading="lazy"
+            width="800"
+            height="450"
+            style="max-width: 100%; height: auto; border-radius: 8px;"
+          />
+        </a>
+        <figcaption style="margin-top: 6px; font-size: 0.95em; color: #555;">
+            My Locator marker popup with moon data displayed.
+        </figcaption>
+      </figure>
+      
+      <figure style="margin-top: 10px; text-align: center;">
         <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 16px;">
 
           <!-- Subfigure 1 -->
