--- a/eme-observer/datasubmission-t.html
+++ b/eme-observer/datasubmission-t.html
@@ -314,6 +314,11 @@
             to Martin <strong><a href="mailto:martin@pj4mm.nl">PJ4MM - click to email</a></strong>
             or see his <a href="https://www.qrz.com/db/PJ4MM" target="_blank">QRZ.com profile</a>. Feel free to submit station pictures for these two bands to Martin too.
         </p>
+        
+        <h2>144&nbsp;MHz</h2>
+        <p>
+            Currently there is no station database for 144MHz. If you would like to commit to creating and maintaining one for the EME community, let us know. 
+        </p>
 
         <h2>Station Pictures</h2>
         <p>
