--- a/eme-observer/statistics-t.html
+++ b/eme-observer/statistics-t.html
@@ -361,6 +361,7 @@
     <div class="controls">
       <div class="filter-group">
         <select id="bandSelect" class="band-select">
+            <option value="144MHz">144MHz</option>
             <option value="222MHz">222MHz</option>
           <option value="432MHz">432MHz</option>
           <option value="902MHz">902MHz</option>
@@ -398,6 +399,7 @@
       const FILE_URL_BASE = ''; // Set this to the base URL if needed
 
       const bandConfig = {
+          '144MHz': { label: '144MHz', jsonFile: 'stn_144MHz.json' },
           '222MHz': { label: '222MHz', jsonFile: 'stn_222MHz.json' },
           '432MHz': { label: '432MHz', jsonFile: 'stn_432MHz.json' },
           '902MHz': { label: '902MHz', jsonFile: 'stn_902MHz.json' },
@@ -580,7 +582,7 @@
       function updateUI(band) {
           document.getElementById('table-title').textContent = `${bandConfig[band].label} EME Stations Statistics`;
 
-          const notReadyBands = ['222MHz', '432MHz', '902MHz', '76GHz'];
+          const notReadyBands = ['144MHz', '222MHz', '432MHz', '902MHz', '76GHz'];
           if (notReadyBands.includes(band)) {
               document.getElementById('statsContent').style.display = 'none';
               document.getElementById('statsMessage').style.display = 'block';
