--- a/eme-observer/statistics-t.html
+++ b/eme-observer/statistics-t.html
@@ -378,7 +378,7 @@
     </div>
     <div id="statsMessage" class="stats-message" style="display: none;"></div>
     <div id="statsContent">
-      <h2>Antenna Size</h2>
+      <h2>Dish Size</h2>
       <canvas id="antennaChart"></canvas>
 
       <h2>Power</h2>
