--- a/eme-observer/user-guide-t.html
+++ b/eme-observer/user-guide-t.html
@@ -976,7 +976,7 @@
 
       <p>
         The <strong>Statistics View</strong> can be accessed from the Control Panel.
-        This mode displays dynamic charts illustrating the distribution of stations by antenna size, transmit power, and DXCC entity. These statistics are automatically refreshed whenever station data is added or updated. Select band via the band selector.
+        This mode displays dynamic charts illustrating the distribution of stations by antenna size (dish diameter or number of Yagi elements combined across all booms in the antenna system), transmit power, and DXCC entity. These statistics are automatically refreshed whenever station data is added or updated. Select band via the band selector.
       </p>
 
       
