--- a/eme-observer/datasubmission.html
+++ b/eme-observer/datasubmission.html
@@ -276,8 +276,17 @@
                 <button onclick="window.location.href='/eme-observer-test/'">Map View</button>
                 <button onclick="window.location.href='table.html'">Table</button>
                 <button onclick="window.location.href='statistics.html'">Statistics</button>
-                <button onclick="window.location.href='/'">🏠</button>
-                <button onclick="window.location.href='user-guide.html'">?</button>
+                <button onclick="window.location.href='/'" style="display:flex; align-items:center; justify-content:center; width:40px; padding:0;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 3l9 9h-3v9h-12v-9h-3l9-9z"/>
+                    </svg>
+                </button>
+                <button onclick="window.location.href='user-guide.html'"
+                            style="display:flex; align-items:center; justify-content:center; width:40px; padding:0;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 2c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4zm-1 16h2v-2h-2v2z"/>
+                        </svg>
+                    </button>
             </div>
         </div>
     </div>
@@ -292,26 +301,29 @@
 
         <h2>432&nbsp;MHz and Above</h2>
         <p>
-            For stations operating on <strong>432&nbsp;MHz and higher bands</strong>, submit station
+            For stations operating on <strong>432&nbsp;MHz and higher bands</strong> (except 902MHz), submit station
             details to the EME Directory maintained by Jan <strong>PA0PLY</strong>:
-            <br>
             <a href="https://www.pa0ply.nl/eme-directory/" target="_blank">
                 https://www.pa0ply.nl/eme-directory/
             </a>
         </p>
 
-        <h2>222&nbsp;MHz</h2>
+        <h2>222&nbsp;MHz and 902&nbsp;MHz</h2>
         <p>
-            For stations operating on <strong>222&nbsp;MHz</strong>, please send station updates
-            to Martin <strong>PJ4MM</strong>.
-            His contact information is available on his
-            <a href="https://www.qrz.com/db/PJ4MM" target="_blank">QRZ.com profile</a>.
+            For stations operating on <strong>222&nbsp;MHz</strong> and <strong>902&nbsp;MHz</strong>, send station updates
+            to Martin <strong><a href="mailto:martin@pj4mm.nl">PJ4MM - click to email</a></strong>
+            or see his <a href="https://www.qrz.com/db/PJ4MM" target="_blank">QRZ.com profile</a>. Feel free to submit station pictures for these two bands to Martin too.
+        </p>
+        
+        <h2>144&nbsp;MHz</h2>
+        <p>
+            Currently there is no station database for 144MHz. If you would like to commit to creating and maintaining one for the EME community, let us know. 
         </p>
 
         <h2>Station Pictures</h2>
         <p>
             To include a station picture in the EME Observer station profiles, send the image
-            to Max <strong>SA5IKN</strong> using the email address listed on his
+            to Max <strong><a href="mailto:maksym.romensky@yahoo.com">SA5IKN - click to email</a></strong> or see his
             <a href="https://www.qrz.com/db/SA5IKN" target="_blank">QRZ.com profile</a>.
             Please specify which band the picture applies to. Each band may use its own picture,
             or a single picture may be used for all bands.
