--- a/eme-observer/table.html
+++ b/eme-observer/table.html
@@ -115,13 +115,6 @@
             margin: -2px;
         }
 
-        .ghz-label {
-            font-size: 0.9rem;
-            font-weight: bold;
-            color: #2c3e50;
-            margin-top: 2px;
-        }
-
         .button-container {
             display: flex;
             gap: 15px;
@@ -258,8 +251,7 @@
                 font-size: 1.3rem;
             }
 
-            .creator-label,
-            .ghz-label {
+            .creator-label {
                 font-size: 0.75rem;
             }
 
@@ -405,14 +397,27 @@
             <div class="app-meta">
                 <div class="creator-label">by SA5IKN</div>
                 <div class="app-name">EME Observer</div>
-                <div id="ghz-label" class="ghz-label">432MHz-76GHz</div>
             </div>
             <div class="button-container">
                 <button onclick="window.location.href='/eme-observer/'">Map View</button>
                 <button onclick="window.location.href='statistics.html'">Statistics</button>
-                <button onclick="window.location.href='datasubmission.html'">Add Station</button>
-                <button onclick="window.location.href='/'">🏠</button>
-                <button onclick="window.location.href='user-guide.html'">?</button>
+                <button onclick="window.location.href='datasubmission.html'"
+                            style="display:flex; align-items:center; justify-content:center; width:40px; padding:0;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+                        </svg>
+                    </button>
+                <button onclick="window.location.href='/'" style="display:flex; align-items:center; justify-content:center; width:40px; padding:0;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 3l9 9h-3v9h-12v-9h-3l9-9z"/>
+                    </svg>
+                </button>
+                <button onclick="window.location.href='user-guide.html'"
+                            style="display:flex; align-items:center; justify-content:center; width:40px; padding:0;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 2c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4zm-1 16h2v-2h-2v2z"/>
+                        </svg>
+                    </button>
             </div>
         </div>
     </div>
@@ -422,8 +427,10 @@
         <div class="controls">
             <div class="filter-group">
                 <select id="bandSelect" class="band-select">
+                    <option value="144MHz">144MHz</option>
                     <option value="222MHz">222MHz</option>
                     <option value="432MHz">432MHz</option>
+                    <option value="902MHz">902MHz</option>
                     <option value="1296MHz">1296MHz</option>
                     <option value="2320MHz">2320MHz</option>
                     <option value="3400MHz">3400MHz</option>
@@ -438,7 +445,6 @@
                     Show only active
                 </label>
             </div>
-            <a href="https://www.pa0ply.nl/eme-directory/" class="pa0ply-link" target="_blank">(see also PA0PLY EME Directory)</a>
         </div>
         <div id="loading-message" class="loading-message">Loading data...</div>
         <div id="error-message" class="error-message">Failed to load data for this band. Please try another band or check your connection.</div>
@@ -472,8 +478,10 @@
         let table = null;
 
         const bandConfig = {
+            '144MHz': { label: '144MHz', jsonFile: 'stn_144MHz.json' },
             '222MHz': { label: '222MHz', jsonFile: 'stn_222MHz.json' },
             '432MHz': { label: '432MHz', jsonFile: 'stn_432MHz.json' },
+            '902MHz': { label: '902MHz', jsonFile: 'stn_902MHz.json' },
             '1296MHz': { label: '1296MHz', jsonFile: 'stn_1296MHz.json' },
             '2320MHz': { label: '2320MHz', jsonFile: 'stn_2320MHz.json' },
             '3400MHz': { label: '3400MHz', jsonFile: 'stn_3400MHz.json' },
@@ -555,7 +563,6 @@
             }
 
             data.forEach(station => {
-                // Validate station data
                 if (!station || !station.Call) {
                     console.warn('Invalid station data:', station);
                     return;
@@ -593,7 +600,6 @@
                 tbody.appendChild(tr);
             });
 
-            // Initialize DataTable only if data is present
             table = $('#stationsTable').DataTable({
                 order: [[0, 'asc']],
                 responsive: true,
@@ -608,7 +614,52 @@
         }
 
         $(document).ready(() => {
-            // Add search filter only once
+            const bandSelect = document.getElementById('bandSelect');
+
+            // Apply saved band (from localStorage) – used on page load and on storage changes
+            function applyLastBand() {
+                const savedBand = localStorage.getItem('emeObserverLastBand');
+                const validBands = Object.keys(bandConfig);
+
+                if (savedBand && validBands.includes(savedBand)) {
+                    bandSelect.value = savedBand;
+                    document.getElementById('table-title').textContent = `${bandConfig[savedBand].label} EME Stations`;
+                    fetchData(savedBand);
+                } else {
+                    // Fallback to default (10GHz) if nothing saved or invalid
+                    bandSelect.value = '10GHz';
+                    document.getElementById('table-title').textContent = '10GHz EME Stations';
+                    fetchData('10GHz');
+                }
+            }
+
+            // 1. Initial load – use last saved band
+            applyLastBand();
+
+            // 2. Real-time sync: listen for changes from other tabs (e.g., main map view)
+            window.addEventListener('storage', (event) => {
+                if (event.key === 'emeObserverLastBand' && event.newValue) {
+                    const newBand = event.newValue;
+                    const validBands = Object.keys(bandConfig);
+                    if (validBands.includes(newBand) && newBand !== bandSelect.value) {
+                        bandSelect.value = newBand;
+                        document.getElementById('table-title').textContent = `${bandConfig[newBand].label} EME Stations`;
+                        fetchData(newBand);
+                    }
+                }
+            });
+
+            // 3. Manual band change in this page
+            $('#bandSelect').on('change', function () {
+                const band = this.value;
+                document.getElementById('table-title').textContent = `${bandConfig[band].label} EME Stations`;
+                fetchData(band);
+
+                // Save the selection so other pages (including map view) can pick it up
+                localStorage.setItem('emeObserverLastBand', band);
+            });
+
+            // Active-only filter
             $.fn.dataTable.ext.search.push(function (settings, data, dataIndex) {
                 if (!document.getElementById('activeOnlyCheckbox')?.checked) {
                     return true;
@@ -616,16 +667,6 @@
                 const note = (data[6] || '').toLowerCase();
                 return !note.includes('dxpedition') && !note.includes('sk') && !note.includes('inactive');
             });
-
-            // Add band select event listener
-            $('#bandSelect').on('change', function () {
-                const band = this.value;
-                document.getElementById('table-title').textContent = `${bandConfig[band].label} EME Stations`;
-                fetchData(band);
-            });
-
-            // Initial data load
-            fetchData('10GHz');
         });
     </script>
 
