--- a/eme-observer/datasubmission.html
+++ b/eme-observer/datasubmission.html
@@ -273,7 +273,7 @@
                 <div class="app-name">EME Observer</div>
             </div>
             <div class="button-container">
-                <button onclick="window.location.href='/eme-observer-test/'">Map View</button>
+                <button onclick="window.location.href='/eme-observer/'">Map View</button>
                 <button onclick="window.location.href='table.html'">Table</button>
                 <button onclick="window.location.href='statistics.html'">Statistics</button>
                 <button onclick="window.location.href='/'" style="display:flex; align-items:center; justify-content:center; width:40px; padding:0;">
